# package-resolver

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: release.yaml
all_package_resolver/: logger.py  main.py  parameters.py  state.py
all_package_resolver/downloaders/: alpine_downloader.py  centos_downloader.py  downloader.py  node_downloader.py  python_downloader.py  ubuntu_downloader.py
all_package_resolver/downloaders/lang/: __init__.py  lang_downloader.py  node_downloader.py  python_downloader.py
all_package_resolver/downloaders/os/: __init__.py  alpine_downloader.py  centos_downloader.py  os_downloader.py  ubuntu_downloader.py
downloaders/: alpine_downloader.py  centos_downloader.py  downloader.py  node_downloader.py  python_downloader.py  ubuntu_downloader.py
tests/: test_downloaders.py
